--- a/IS202/web/index.html
+++ b/IS202/web/index.html
@@ -13,16 +13,10 @@
         <div>
             <p>Her kan du registrere deg eller logge inn</p>
 
-            <form action="LoginServlet" method="post">
+            <form action="/MainPage" method="post">
                 <input type="Submit" name="btnLogin" value="Logg Inn"> <br><br>  
             </form>  
-            <form action="RegisterForm" method="post">
-                <input type="Submit" name="btnRegister" value="Registrer deg"> <br><br>  
-            </form>
-            <form action="ModulForms" method="post">
-                <input type="Submit" name="btnModuler" value="Moduler"> <br><br>  
-            </form>  
-            <br><br>
+            
 
         </div>
     </body>
