--- a/IS202/web/index.html
+++ b/IS202/web/index.html
@@ -12,8 +12,8 @@
     <body>
         <div>
             <p>Her kan du registrere deg eller logge inn</p>
-
-            <form action="/MainPage" method="post">
+                
+            <form action="MainPage" method="post">
                 <input type="Submit" name="btnLogin" value="Logg Inn"> <br><br>  
             </form>  
             
