--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 -->
 <html>
     <head>
-        <title> Oversikt over forsikringsavtaler </title>
+        <title> SLIT </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css.css" rel="stylesheet" type="text/css">
