--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 -->
 <html>
     <head>
-        <title> Oversikt over forsikringsavtaler </title>
+        <title> Logg inn på slit </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css.css" rel="stylesheet" type="text/css">
@@ -11,7 +11,8 @@
 
     <body>
         <div>
-            <p>Her kan du registrere deg eller logge inn</p>
+            <h1>Logg inn med Feide</h1>
+            <p> slit - UiA har bedt om at du logger inn med Feide.</p>
                 
             <form action="MainPage" method="post">
                 <input type="Submit" name="btnLogin" value="Logg Inn"> <br><br>  
