ordnet css og la til funksjons-oppsett til moduleMenu

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <div>
-            <h1>Logg inn med Feide</h1>
+            <h1>Logg inn med slit</h1>
             <p> slit - UiA har bedt om at du logger inn med Feide.</p>
                 
             <form action="MainPage" method="post">
